--- a/package.json
+++ b/package.json
@@ -14,20 +14,21 @@
   "author": "zikrimarquel",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.18.0",
-    "body-parser": "^1.18.3",
-    "cors": "^2.8.4",
-    "express": "^4.16.3",
-    "jsonwebtoken": "^8.2.2",
-    "log-to-file": "^1.3.0",
-    "mariadb": "^2.0.2-rc",
-    "needle": "^2.2.1",
-    "node-cache": "^4.2.0",
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "log-to-file": "^2.0.1",
+    "mariadb": "^2.1.0",
+    "needle": "^2.4.0",
+    "node-cache": "^4.2.1",
+    "npm-check-updates": "^3.1.20",
     "redis": "^2.8.0",
-    "request": "^2.87.0",
-    "validator": "^10.3.0"
+    "request": "^2.88.0",
+    "validator": "^11.1.0"
   },
   "devDependencies": {
-    "nodemon": "^1.17.5"
+    "nodemon": "^1.19.1"
   }
 }
